Implemented register user logic when EMS creates USER